--- a/libs/stylus/modules/_.styl
+++ b/libs/stylus/modules/_.styl
@@ -1,1 +1,10 @@
-// Enter your custom styling here
+.header
+  display block
+  height 10vh
+
+.logo_float
+  position fixed
+  top 0
+  left 5%
+  margin-top 20px
+  z-index 5
